# ilpost-orange-widget

./: CHANGELOG.md  LICENSE  README.md  publish.ps1  pyproject.toml  setup.cfg
.claude/: settings.json
orangecontrib/ilpost/: ilpost_api.py
orangecontrib/ilpost/widgets/: __init__.py  owilpost.py
