[metadata]
name = orange3-ilpost
version = 0.1.0
description = Orange3 widget for fetching articles from Il Post
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = girasella
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing

[options]
packages = find_namespace:
install_requires =
    Orange3
    orange3-text
    ilpost-api-wrapper
python_requires = >=3.9

[options.packages.find]
include = orangecontrib.*

[options.entry_points]
orange3.addon =
    ilpost = orangecontrib.ilpost
orange.widgets =
    Il Post = orangecontrib.ilpost.widgets
